# rasterbox

./: Cargo.toml  README.md
src/: arcascii_raster.rs  arcbinary_raster.rs  esri_bil.rs  grass_raster.rs  idrisi_raster.rs  lib.rs  raster_lib.rs  saga_raster.rs  whitebox_raster.rs
src/geotiff/: geokeys.rs  ifd.rs  mod.rs  tiff_consts.rs
src/structures/: mod.rs  polynomial_regression_2d.rs
src/utils/: byte_order_reader.rs  byte_order_writer.rs  mod.rs
