[package]
name = "geotiff"
version = "2.3.0"
authors = ["John Lindsay <jlindsay@uoguelph.ca>"]
edition = "2021"

[dependencies]
byteorder = "^1.3.1"
chrono = "0.4.21"
lzw = "0.10.0"
miniz_oxide = "0.3.6"
num_cpus = "1.14.0"
num-traits = "0.2.14"
rstar = "0.10.0"
nalgebra = "0.32.2"
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
